<resources>
    <string name="app_name">TheTechUnique</string>
    <!--- String HackerStudent -->
    <string name="app_tag">HACK</string>
    <string name="app_login">Login Screen.</string>
    <string name="app_create_acc">Create Account.</string>
    <string name="app_acc">Account</string>
    <string name="app_home">Home</string>
    <string name="app_email_hint">Email</string>
    <string name="app_pass_hint">Password</string>
    <string name="app_remember">Remember Me</string>
    <string name="app_login_btn">Login</string>
    <string name="app_sign_btn">Sign Up</string>
    <string name="app_sign_out_btn">Log Out</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="app_next">Next</string>
    <string name="verify">Verification</string>
    <string name="app_verify_btn">Verify</string>
    <string name="opt_verify">OTP is send successfully to you phone no</string>
    <string name="timer_count">%1$d sec</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_file">Create a new account?</string>
    <string name="vai_text">Via Text.</string>
    <string name="vai_phone">Via Email.</string>
    <string name="wrong_detail">Pleas,Enter the Correct Info</string>
    <string name="wrong_email">Please,Enter the Correct Email</string>
    <string name="wrong_password">Password is Weak :( </string>
    <string name="wrong_phone">Please,Enter the Correct Phone Number</string>
    <string name="pleas_wait">Please, Wait</string>
    <string name="Exception_one">The out of band code is invalid. This can happen if the code is malformed, expired, or has already been used.</string>
    <string name="Exception_two">Given String is empty or null</string>
    <string name="Miss_request">User Request is Denied!!,Try To Create New Account</string>
    <string name="please_error">What to do,</string>

    <!-- Profile Screen-->
    <string name="user_profile">Profile</string>
    <string name="feature_title">Featured course,</string>
    <string name="Teacher_name">TechUnique</string>

    <!-- Course Item-->
    <string name="course_thumb">Course Thumbnail</string>
    <string name="btn_retry">Retry</string>
    <string name="error_text">UnAble to Load More.</string>
    <!-- Submit Layout -->
    <string name="btn_sbm">Submit</string>
    <string name="btn_new_eml">New Email Address</string>
    <string name="btn_curr_eml">Current Email Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>

    <!-- Explore Fragment-->
    <string name="frag_exp">Explore</string>
    <string name="search_hint">Enter Course Name</string>
    <string name="we_found_part_1">We found</string>
    <string name="we_found_part_2">course available for you</string>


    <!--Course Preview -->
    <string name="course_created">Created By -</string>
    <string name="lang_type">Hindi , English</string>
    <string name="COURSE_by_btn">Buy now</string>
    <string name="COURSE_preview">Preview this Video</string>
    <string name="course_add_cart_btn">Add To Cart</string>
    <string name="course_review_btn">See More Reviews</string>

    <!-- Payment Error-->
    <string name="payment_err">Error Text status</string>

    <!-- My Course Fragment -->
    <string name="frag_course_my">My Subscription</string>
    <string name="frag_sub">Subscription</string>
    <string name="ass_btn">View Assignment File</string>
    <string name="frag_desc">Great Day! What would you \nlike to learn today?</string>

    <!-- Add Cart Fragment -->
    <string name="frag_cart">Wishlist</string>
    <!-- Splash Activity-->
    <string name="Splash_screen">PERMISSION_DENIED: Missing or insufficient permissions.</string>
    <string name="review_tab">Review Tab</string>

</resources>