<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.hackingwork.auth.PhoneNumberOtp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text=" CO\n DE"
            android:textColor="@color/black"
            android:textSize="80sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:text="@string/verify"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/opt_verify"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            tools:text="+918004048261"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <com.chaos.view.PinView
                android:id="@+id/pin_view"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@color/otp_box_bg"
                app:cursorColor="@color/black"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="5dp"
                app:itemWidth="40dp"
                app:lineColor="@color/black"
                app:lineWidth="1dp" />

            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cheery_red"
                android:elevation="5dp"
                android:text="@string/app_verify_btn"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/otpCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/color_red"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/resend_otp"
            android:textColor="@color/link_type_bg"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textColor="@color/color_red"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="@string/opt_verify"
            tools:visibility="visible" />
    </LinearLayout>
</ScrollView>